# aligned-hackathon

./: .gitignore  .gitmodules  Makefile  README.md
contracts/: foundry.toml
contracts/src/: LeaderBoardVerifierContract.sol
game/: Cargo.toml
game/src/: game.rs  main.rs
game_prove/: Cargo.toml
game_prove/src/: game_prove.rs
program/: Cargo.toml
program/elf/: commitment  riscv32im-succinct-zkvm-elf
program/src/: main.rs
prove/: Cargo.toml
prove/src/game/: main.rs
script/: Cargo.toml
script/src/: game.rs  main.rs
