[package]
name = "space_aligners"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ruscii = "0.4.0"



sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag="v0.10.1" }

ethers = { tag = "v2.0.15-fix-reconnections", features = [
    "ws",
    "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
rpassword = "7.3.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
bincode = "1.3.3"
clap = { version = "4.5.8", features = ["derive"] }
anyhow = "1.0.86"
log = "0.4.21"
hex = "0.4.3"
dialoguer = "0.11.0"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }
