[package]
name = "space_aligners"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.8-testnet" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ruscii = "0.4.0"
clap = { version = "4.5.8", features = ["derive"] }