[package]
name = "space_aligners_prove"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "space_aligners_bin"
path = "src/bin/main.rs"

[[game]]
name = "space_aligners"
path = "src/game/main.rs"


[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tracing = "0.1.40"
hex = "0.4.3"
base64 = "0.22.1"
bincode = "1.3.3"

ethers = { tag = "v2.0.15-fix-reconnections", features = [
    "ws",
    "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
rpassword = "7.3.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.8", features = ["derive"] }
anyhow = "1.0.86"
log = "0.4.21"
dialoguer = "0.11.0"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }

